--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
     username: root
     password: Dongxiang123!@
   rabbitmq:
-    host: 192.168.1.203
+    host: 121.36.222.116
     port: 5672
-    username: admin
-    password: 123456
+    username: isong
+    password: isong@123456
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*Mapper.xml
