石化销售明细汇总后端接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,5 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.wonderful.bean.entity
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
