--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,17 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://124.70.211.57:3306/wonderful?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&useSSL=false
+    url: jdbc:mysql://localhost:3306/wonderful?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&useSSL=false
     username: root
-    password: Dongxiang123!@
+    password: '#*hui666#*hui'
   rabbitmq:
-    host: 121.36.222.116
+    host: localhost
     port: 5672
-    username: isong
-    password: isong@123456
+    username: admin
+    password: 123456
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.wonderful.bean.entity
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
